--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/csharp-mvc-core.csproj",
+                "${workspaceFolder}/MvcMovie/MvcMovie.sln",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/csharp-mvc-core.csproj",
+                "${workspaceFolder}/MvcMovie/MvcMovie.sln",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -33,7 +33,7 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/csharp-mvc-core.csproj"
+                "${workspaceFolder}/MvcMovie/MvcMovie.sln"
             ],
             "problemMatcher": "$msCompile"
         }
