--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Data Source=MvcMovieContext-3fffec7d-bf8e-49c9-86f5-13340f88a404.db"
+  }
 }
