--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,10 +48,11 @@
 				"DotJoshJohnson.xml",
 				"Fudge.auto-using",
 				"hbenl.vscode-test-explorer",
-				"formulahendry.dotnet-test-explorer"
+				"formulahendry.dotnet-test-explorer",
 			]
 		}
-	}
+	},
+  "postCreateCommand": "/bin/bash ./.devcontainer/post-create.sh > ~/post-create.log"
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
