--- a/MvcMovie/appsettings.Development.json
+++ b/MvcMovie/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Data Source=MvcMovieContext-3fffec7d-bf8e-49c9-86f5-13340f88a404.db"
   }
 }
